--- a/packages/sdk-next/tsconfig.json
+++ b/packages/sdk-next/tsconfig.json
@@ -1,18 +1,18 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "strict": false,
-    "skipLibCheck": true,
+    "lib": ["DOM", "ES2022", "DOM.Iterable"],
     "esModuleInterop": true,
-    "lib": [
-      "ESNext",
-      "dom",
-    ],
     "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx"
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "skipLibCheck": true,
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "noEmit": true,
+    "moduleDetection": "force",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "include": [".eslintrc.cjs", "src/**/*.ts", "src/*.ts"]
 }
