update API, docs

--- a/packages/sdk-next/package.json
+++ b/packages/sdk-next/package.json
@@ -20,7 +20,8 @@
   },
   "scripts": {
     "build": "tsup",
-    "build:docs": "typedoc"
+    "build:docs": "typedoc",
+    "build:all": "pnpm build && pnpm build:docs"
   },
   "keywords": [
     "venue",
